refactor: 替换System.out.println和System.err.println为日志记录